# mydeep

./: AGENTS.md  README.md  pyproject.toml  readme.md  run-agents.sh
src/: async-subagent.py  backend.py  basic.py  todo-list.py
src/mydeep/: __init__.py  __main__.py  agent.py
