[project]
name = "mydeep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.5.7",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph-cli[inmem]>=0.4.24",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
